--- a/Code/code.html
+++ b/Code/code.html
@@ -1,3 +1,16 @@
 <html>
-    <h1>This is awful I'm missing a closing tag
+    <h1>This is awful I'm missing a closing tag</h1>
+    <p class="test-class">new stuff here</p>
+
+    <p id="test"></p>
+    <img> <!--empty image tag-->
+    <script type="text\javascript">
+        document.getElementById("test").innerText = "Hello!";
+    </script>
+
+    <style>
+        .test-class {
+            color: green;
+        }
+    </style>
 </html>
